--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
 
 <h2>Click Here to Enter</h2>
   
-<h1>Matthew Bourne        Bourne Media </h1>
+<h1>Matthew Bourne </h1>
 <h1>(BA) Media and Communications Student at Birmingham City University</h1>
 
     
